--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,167 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keval's Gallery</title>
-  <link rel="stylesheet" href="/style.css" />
-  <style>
-    .lightbox-arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 3rem;
-      color: white;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      z-index: 1001;
-      user-select: none;
-      transition: color 0.2s ease;
-    }
-    .lightbox-arrow:hover {
-      color: #ffcccc;
-    }
-    .lightbox-prev {
-      left: 10px;
-    }
-    .lightbox-next {
-      right: 10px;
-    }
-    @media (max-width: 600px) {
-      .lightbox-arrow {
-        font-size: 2.5rem;
-      }
-    }
-
-    .lightbox {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      backdrop-filter: blur(4px);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 1000;
-    }
-
-    .lightbox img {
-      max-width: 90%;
-      max-height: 80vh;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    }
-
-    .lightbox-controls {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-    }
-
-    .btn {
-      padding: 8px 16px;
-      border: none;
-      background: #333;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1rem;
-      text-decoration: none;
-    }
-
-    .btn.danger {
-      background: #cc0000;
-    }
-
-    .container {
-      text-align: center;
-      padding: 20px;
-    }
-
-    .buttons {
-      margin: 15px 0;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-
-    .gallery img {
-      width: 220px;
-      height: auto;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Keval's Photography</title>
+  <link rel="stylesheet" href="/gallery/style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Keval's Photography</h1>
-    <div class="buttons">
-      <a href="/" class="btn">🏠 Home</a>
-      <a href="https://www.instagram.com/keval_kotadia_/" target="_blank" class="btn">📷 Follow on Instagram</a>
-    </div>
-    <div class="gallery">
-      ${[...Array(17)].map((_, i) => `
-        <img src="/images/${i + 1}.jpg" alt="Photo ${i + 1}" loading="lazy" onclick="openLightbox(${i})">
-      `).join('')}
-    </div>
+  <h1>Keval's Photography</h1>
+  <div class="buttons">
+    <a href="/" class="btn"><i class="fas fa-home"></i> Home</a>
+    <a href="https://www.instagram.com/keval.kotadia" class="btn" target="_blank">
+      <i class="fas fa-camera"></i> Follow on Instagram
+    </a>
   </div>
 
-  <div class="lightbox" id="lightbox">
-    <span class="lightbox-arrow lightbox-prev" onclick="changeSlide(-1)">&lt;</span>
-    <img id="lightbox-img" src="" alt="Full Size" />
-    <span class="lightbox-arrow lightbox-next" onclick="changeSlide(1)">&gt;</span>
-    <div class="lightbox-controls">
-      <a id="downloadBtn" class="btn" download target="_blank">⬇️ Download</a>
-      <button class="btn danger" onclick="closeLightbox()">❌ Close</button>
-    </div>
+  <div class="gallery">
+    <img src="/images/1.jpg" alt="Photo 1" loading="lazy" onclick="openLightbox(0)">
+    <img src="/images/2.jpg" alt="Photo 2" loading="lazy" onclick="openLightbox(1)">
+    <img src="/images/3.jpg" alt="Photo 3" loading="lazy" onclick="openLightbox(2)">
+    <img src="/images/4.jpg" alt="Photo 4" loading="lazy" onclick="openLightbox(3)">
+    <img src="/images/5.jpg" alt="Photo 5" loading="lazy" onclick="openLightbox(4)">
+    <img src="/images/6.jpg" alt="Photo 6" loading="lazy" onclick="openLightbox(5)">
+    <img src="/images/7.jpg" alt="Photo 7" loading="lazy" onclick="openLightbox(6)">
+    <img src="/images/8.jpg" alt="Photo 8" loading="lazy" onclick="openLightbox(7)">
+    <img src="/images/9.jpg" alt="Photo 9" loading="lazy" onclick="openLightbox(8)">
+    <img src="/images/10.jpg" alt="Photo 10" loading="lazy" onclick="openLightbox(9)">
+    <img src="/images/11.jpg" alt="Photo 11" loading="lazy" onclick="openLightbox(10)">
+    <img src="/images/12.jpg" alt="Photo 12" loading="lazy" onclick="openLightbox(11)">
+    <img src="/images/13.jpg" alt="Photo 13" loading="lazy" onclick="openLightbox(12)">
+    <img src="/images/14.jpg" alt="Photo 14" loading="lazy" onclick="openLightbox(13)">
+    <img src="/images/15.jpg" alt="Photo 15" loading="lazy" onclick="openLightbox(14)">
+    <img src="/images/16.jpg" alt="Photo 16" loading="lazy" onclick="openLightbox(15)">
+    <img src="/images/17.jpg" alt="Photo 17" loading="lazy" onclick="openLightbox(16)">
+  </div>
+
+  <div id="lightbox" class="lightbox" onclick="closeLightbox()">
+    <span class="close">&times;</span>
+    <img class="lightbox-content" id="lightbox-img">
+    <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+    <a class="next" onclick="changeSlide(1)">&#10095;</a>
   </div>
 
   <script>
-    const images = [...Array(17)].map((_, i) => `/images/${i + 1}.jpg`);
-    let currentIndex = 0;
+    const images = [
+      "/images/1.jpg", "/images/2.jpg", "/images/3.jpg", "/images/4.jpg", "/images/5.jpg",
+      "/images/6.jpg", "/images/7.jpg", "/images/8.jpg", "/images/9.jpg", "/images/10.jpg",
+      "/images/11.jpg", "/images/12.jpg", "/images/13.jpg", "/images/14.jpg", "/images/15.jpg",
+      "/images/16.jpg", "/images/17.jpg"
+    ];
+    let currentSlide = 0;
 
     function openLightbox(index) {
-      currentIndex = index;
-      document.getElementById('lightbox-img').src = images[currentIndex];
-      document.getElementById('downloadBtn').href = images[currentIndex];
-      document.getElementById('lightbox').style.display = 'flex';
+      currentSlide = index;
+      document.getElementById("lightbox").style.display = "block";
+      document.getElementById("lightbox-img").src = images[currentSlide];
     }
 
     function closeLightbox() {
-      document.getElementById('lightbox').style.display = 'none';
+      document.getElementById("lightbox").style.display = "none";
     }
 
-    function changeSlide(direction) {
-      currentIndex = (currentIndex + direction + images.length) % images.length;
-      openLightbox(currentIndex);
+    function changeSlide(n) {
+      currentSlide = (currentSlide + n + images.length) % images.length;
+      document.getElementById("lightbox-img").src = images[currentSlide];
     }
 
-    document.addEventListener('keydown', e => {
-      if (document.getElementById('lightbox').style.display === 'flex') {
-        if (e.key === 'ArrowLeft') changeSlide(-1);
-        if (e.key === 'ArrowRight') changeSlide(1);
-        if (e.key === 'Escape') closeLightbox();
+    document.addEventListener("keydown", function (e) {
+      if (document.getElementById("lightbox").style.display === "block") {
+        if (e.key === "ArrowLeft") changeSlide(-1);
+        if (e.key === "ArrowRight") changeSlide(1);
+        if (e.key === "Escape") closeLightbox();
       }
-    });
-
-    let touchStartX = 0;
-    document.getElementById('lightbox').addEventListener('touchstart', e => {
-      touchStartX = e.changedTouches[0].screenX;
-    });
-    document.getElementById('lightbox').addEventListener('touchend', e => {
-      const deltaX = e.changedTouches[0].screenX - touchStartX;
-      if (deltaX > 50) changeSlide(-1);
-      if (deltaX < -50) changeSlide(1);
     });
   </script>
 </body>
