--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,489 +1,153 @@
-<!DOCTYPE html>
-  
+<!-- Updated: Removed Contact section & updated Instagram link -->
+<!doctype html>
 <html lang="en">
-  
 <head>
-  
-  <meta charset="UTF-8" />
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  
-  <title>Keval's Gallery</title>
-  
-  <link rel="icon" href="/images/favicon.png" type="image/png"/>
-  
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Keval Kotadia — Nature Photography</title>
+  <meta name="description" content="Explore the serene nature photography of Keval Kotadia — landscapes, wildlife & more." />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
-  
-    body {
-  
-      margin: 0;
-  
-      font-family: 'Segoe UI', sans-serif;
-  
-      background: url('/images/background.jpg') no-repeat center center fixed;
-  
-      background-size: cover;
-  
-      color: white;
-  
-      position: relative;
-  
+    :root{
+      --bg:#0f0f10; --card:#0f1720; --muted:#a7b0b8; --accent:#f59e0b; --white:#ffffff;
+      --max-width:1100px; --radius:14px;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
-  
-
-  
-    .overlay {
-  
-      position: fixed;
-  
-      top: 0;
-  
-      left: 0;
-  
-      width: 100%;
-  
-      height: 100%;
-  
-      background: rgba(0, 0, 0, 0.75);
-  
-      z-index: -1;
-  
+    *{box-sizing:border-box}
+    body{margin:0;background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
+    .container{max-width:var(--max-width); margin:0 auto; padding:28px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#111827,#0ea5a9);display:flex;align-items:center;justify-content:center;font-weight:700}
+    .brand h1{font-size:18px;margin:0}
+    .brand p{margin:0;font-size:13px;color:var(--muted)}
+    nav a{color:var(--white);text-decoration:none;margin-left:16px;font-size:14px}
+    .hero{display:grid;grid-template-columns:1fr;gap:24px;align-items:center;margin:40px 0}
+    .hero-main{padding:28px;background:rgba(255,255,255,0.02);border-radius:12px}
+    .hero .headline{font-size:28px;margin:0 0 8px}
+    .hero .sub{color:var(--muted);margin:0 0 16px}
+    .cta{display:inline-block;padding:10px 16px;border-radius:10px;background:var(--accent);color:#050505;font-weight:600;text-decoration:none}
+    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px;margin:20px 0}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;overflow:hidden;position:relative}
+    .card img{width:100%;height:260px;object-fit:cover;display:block}
+    .card .meta{padding:12px}
+    .card .meta h3{margin:0 0 6px;font-size:16px}
+    .card .meta p{margin:0;color:var(--muted);font-size:13px}
+    .lightbox{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:1200}
+    .lightbox.open{display:flex}
+    .lightbox img{max-width:95%;max-height:85%;border-radius:8px;box-shadow:0 20px 40px rgba(0,0,0,0.6)}
+    .lb-close{position:absolute;top:28px;right:28px;background:rgba(0,0,0,0.4);border-radius:8px;padding:8px 10px;cursor:pointer}
+    footer{margin:48px 0 16px;color:var(--muted);font-size:13px;text-align:center}
+    @media (min-width:900px){
+      .hero{grid-template-columns:1fr 420px}
+      .hero .hero-image{height:420px;border-radius:12px;overflow:hidden}
+      .card img{height:200px}
     }
-  
-
-  
-    header {
-  
-      text-align: center;
-  
-      padding: 2rem 1rem 1rem;
-  
-    }
-  
-
-  
-    header h1 {
-  
-      font-size: 2.5rem;
-  
-      letter-spacing: 2px;
-  
-      margin: 0;
-  
-      text-shadow: 0 0 10px black;
-  
-    }
-  
-
-  
-    .buttons {
-  
-      display: flex;
-  
-      justify-content: center;
-  
-      gap: 1rem;
-  
-      margin-top: 1rem;
-  
-      flex-wrap: wrap;
-  
-    }
-  
-
-  
-    .buttons a {
-  
-      text-decoration: none;
-  
-      background: #ffffff20;
-  
-      padding: 0.7rem 1.2rem;
-  
-      border: 1px solid white;
-  
-      border-radius: 30px;
-  
-      color: white;
-  
-      transition: 0.3s;
-  
-    }
-  
-
-  
-    .buttons a:hover {
-  
-      background: white;
-  
-      color: black;
-  
-    }
-  
-
-  
-    .gallery {
-  
-      display: grid;
-  
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  
-      gap: 15px;
-  
-      padding: 2rem;
-  
-      max-width: 1200px;
-  
-      margin: auto;
-  
-    }
-  
-
-  
-    .gallery img {
-  
-      width: 100%;
-  
-      border-radius: 10px;
-  
-      cursor: pointer;
-  
-      transition: transform 0.3s ease;
-  
-      box-shadow: 0 0 10px #00000070;
-  
-    }
-  
-
-  
-    .gallery img:hover {
-  
-      transform: scale(1.03);
-  
-    }
-  
-
-  
-    #lightbox {
-  
-      display: none;
-  
-      position: fixed;
-  
-      top: 0; left: 0;
-  
-      width: 100%; height: 100%;
-  
-      background: rgba(0,0,0,0.9);
-  
-      justify-content: center;
-  
-      align-items: center;
-  
-      flex-direction: column;
-  
-      z-index: 999;
-  
-    }
-  
-
-  
-    #lightbox img {
-  
-      max-width: 90%;
-  
-      max-height: 80%;
-  
-      border-radius: 10px;
-  
-    }
-  
-
-  
-    .lightbox-controls {
-  
-      margin-top: 1rem;
-  
-      display: flex;
-  
-      gap: 1rem;
-  
-    }
-  
-
-  
-    .lightbox-controls button {
-  
-      padding: 0.5rem 1rem;
-  
-      background: white;
-  
-      border: none;
-  
-      border-radius: 5px;
-  
-      cursor: pointer;
-  
-      font-weight: bold;
-  
-    }
-  
-
-  
-    .lightbox-controls button:hover {
-  
-      background: #ddd;
-  
-    }
-  
-
-  
-    #watermark {
-  
-      position: fixed;
-  
-      bottom: 10px;
-  
-      right: 10px;
-  
-      font-size: 14px;
-  
-      opacity: 0.5;
-  
-    }
-  
-
-  
-    #backToTop {
-  
-      position: fixed;
-  
-      bottom: 20px;
-  
-      left: 20px;
-  
-      font-size: 1.5rem;
-  
-      background: #ffffff20;
-  
-      color: white;
-  
-      padding: 10px 14px;
-  
-      border-radius: 50%;
-  
-      border: 1px solid white;
-  
-      cursor: pointer;
-  
-      display: none;
-  
-      transition: 0.3s;
-  
-    }
-  
-
-  
-    #backToTop:hover {
-  
-      background: white;
-  
-      color: black;
-  
-    }
-  
-
-  
-    @keyframes fadeIn {
-  
-      from { opacity: 0; transform: translateY(10px); }
-  
-      to { opacity: 1; transform: translateY(0); }
-  
-    }
-  
-
-  
-    .gallery img {
-  
-      animation: fadeIn 0.6s ease-in-out;
-  
-    }
-  
-
-  
   </style>
-  
 </head>
-  
 <body>
-  
+  <div class="container">
+    <header>
+      <div class="brand">
+        <div class="logo">KK</div>
+        <div>
+          <h1>Keval Kotadia</h1>
+          <p>Nature & Landscape Photographer</p>
+        </div>
+      </div>
+      <nav>
+        <a href="#gallery">Gallery</a>
+        <a href="#about">About</a>
+        <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
+      </nav>
+    </header>
 
-  
-<div class="overlay"></div>
-  
+    <section class="hero">
+      <div class="hero-main">
+        <p class="headline">Capturing the quiet moments in nature.</p>
+        <p class="sub">Welcome — I’m Keval. I specialize in landscape and nature photography. Browse the gallery below and follow me on Instagram for my latest work.</p>
+        <a class="cta" href="#gallery">View Gallery</a>
+      </div>
+      <div class="hero-image" aria-hidden="true">
+        <img src="images/featured.webp" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
+      </div>
+    </section>
 
-  
-<header>
-  
-  <h1>Keval's Photography</h1>
-  
-  <div class="buttons">
-  
-    <a href="/">🏠 Home</a>
-  
-    <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">📷 Follow on Instagram</a>
-  
+    <section id="gallery">
+      <h2 style="margin-top:6px">Gallery</h2>
+      <div id="galleryGrid" class="gallery" aria-live="polite"></div>
+    </section>
+
+    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true">
+      <div class="lb-close" id="lbClose">✕</div>
+      <img id="lbImage" src="" alt="Enlarged photo">
+    </div>
+
+    <section id="about" style="margin-top:30px">
+      <h2>About</h2>
+      <div style="display:grid;grid-template-columns:1fr;gap:16px;margin-top:12px">
+        <div style="font-size:15px;color:var(--muted)">I’m a nature photographer based in India. I hunt light, patience and moments that tell a story. Available for prints, commissions and travel assignments.</div>
+      </div>
+    </section>
+
+    <footer>
+      © <span id="year"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" style="color:var(--muted);text-decoration:underline" target="_blank">Instagram</a>
+    </footer>
   </div>
-  
-</header>
-  
 
-  
-<section class="gallery">
-  
-  <!-- Image Blocks (17 total) -->
-  
-  <img src="/images/1.jpg" alt="Photo 1" onclick="openLightbox(0)">
-  
-  <img src="/images/2.jpg" alt="Photo 2" onclick="openLightbox(1)">
-  
-  <img src="/images/3.jpg" alt="Photo 3" onclick="openLightbox(2)">
-  
-  <img src="/images/4.jpg" alt="Photo 4" onclick="openLightbox(3)">
-  
-  <img src="/images/5.jpg" alt="Photo 5" onclick="openLightbox(4)">
-  
-  <img src="/images/6.jpg" alt="Photo 6" onclick="openLightbox(5)">
-  
-  <img src="/images/7.jpg" alt="Photo 7" onclick="openLightbox(6)">
-  
-  <img src="/images/8.jpg" alt="Photo 8" onclick="openLightbox(7)">
-  
-  <img src="/images/9.jpg" alt="Photo 9" onclick="openLightbox(8)">
-  
-  <img src="/images/10.jpg" alt="Photo 10" onclick="openLightbox(9)">
-  
-  <img src="/images/11.jpg" alt="Photo 11" onclick="openLightbox(10)">
-  
-  <img src="/images/12.jpg" alt="Photo 12" onclick="openLightbox(11)">
-  
-  <img src="/images/13.jpg" alt="Photo 13" onclick="openLightbox(12)">
-  
-  <img src="/images/14.jpg" alt="Photo 14" onclick="openLightbox(13)">
-  
-  <img src="/images/15.jpg" alt="Photo 15" onclick="openLightbox(14)">
-  
-  <img src="/images/16.jpg" alt="Photo 16" onclick="openLightbox(15)">
-  
-  <img src="/images/17.jpg" alt="Photo 17" onclick="openLightbox(16)">
-  
-</section>
-  
-
-  
-<div id="lightbox">
-  
-  <img id="lightboxImage" src="" alt="Preview"/>
-  
-  <div class="lightbox-controls">
-  
-    <button onclick="prevImage()">⟵ Prev</button>
-  
-    <button onclick="downloadImage()">⬇️ Download</button>
-  
-    <button onclick="nextImage()">Next ⟶</button>
-  
-    <button onclick="closeLightbox()">❌ Close</button>
-  
-  </div>
-  
-</div>
-  
-
-  
-<div id="watermark">© Keval Photography</div>
-  
-<div id="backToTop" onclick="scrollToTop()">↑</div>
-  
-
-  
-<script>
-  const images = Array.from(document.querySelectorAll('.gallery img'));
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImage = document.getElementById('lightboxImage');
-  let currentIndex = 0;
-
-  function openLightbox(index) {
-    currentIndex = index;
-    lightboxImage.src = images[currentIndex].src;
-    lightbox.style.display = 'flex';
-  }
-
-  function closeLightbox() {
-    lightbox.style.display = 'none';
-  }
-
-  function nextImage() {
-    currentIndex = (currentIndex + 1) % images.length;
-    lightboxImage.src = images[currentIndex].src;
-  }
-
-  function prevImage() {
-    currentIndex = (currentIndex - 1 + images.length) % images.length;
-    lightboxImage.src = images[currentIndex].src;
-  }
-
-  function downloadImage() {
-    const link = document.createElement('a');
-    link.href = images[currentIndex].src;
-    link.download = `photo_${currentIndex + 1}.jpg`;
-    link.click();
-  }
-
-  // Keyboard navigation
-  document.addEventListener('keydown', function(e) {
-    if (lightbox.style.display === 'flex') {
-      if (e.key === 'ArrowRight') nextImage();
-      else if (e.key === 'ArrowLeft') prevImage();
-      else if (e.key === 'Escape') closeLightbox();
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    async function loadGallery(){
+      try{
+        const res = await fetch('gallery.json', {cache: 'no-cache'});
+        if(!res.ok) throw new Error('gallery.json not found');
+        const data = await res.json();
+        const grid = document.getElementById('galleryGrid');
+        data.forEach(item => {
+          const card = document.createElement('article');
+          card.className = 'card';
+          const img = document.createElement('img');
+          img.loading = 'lazy';
+          img.decoding = 'async';
+          img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
+          img.src = item.src;
+          img.addEventListener('click', () => openLightbox(item));
+          card.appendChild(img);
+          const meta = document.createElement('div');
+          meta.className = 'meta';
+          const h3 = document.createElement('h3'); h3.textContent = item.title || '';
+          const p = document.createElement('p'); p.textContent = item.year || '';
+          meta.appendChild(h3); meta.appendChild(p);
+          card.appendChild(meta);
+          grid.appendChild(card);
+        });
+      }catch(err){
+        document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
+      }
     }
-  });
-
-  // Back to Top Button
-  window.onscroll = function () {
-    const btn = document.getElementById("backToTop");
-    btn.style.display = window.scrollY > 200 ? "block" : "none";
-  };
-
-  function scrollToTop() {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-
-  // Touch Swipe Support
-  let touchStartX = 0;
-  let touchEndX = 0;
-
-  lightbox.addEventListener('touchstart', function(e) {
-    touchStartX = e.changedTouches[0].screenX;
-  });
-
-  lightbox.addEventListener('touchend', function(e) {
-    touchEndX = e.changedTouches[0].screenX;
-    handleGesture();
-  });
-
-  function handleGesture() {
-    const threshold = 50; // Minimum px to detect swipe
-    if (touchEndX < touchStartX - threshold) nextImage();
-    if (touchEndX > touchStartX + threshold) prevImage();
-  }
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lbImage');
+    function openLightbox(item){
+      lbImg.src = item.src; lbImg.alt = item.alt || item.title || '';
+      lb.classList.add('open');
+    }
+    document.getElementById('lbClose').addEventListener('click', () => { lb.classList.remove('open'); lbImg.src=''; });
+    lb.addEventListener('click', (e)=>{ if(e.target===lb){ lb.classList.remove('open'); lbImg.src=''; } });
+    loadGallery();
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') lb.classList.remove('open'); });
+  </script>
+  <script>
+  fetch('gallery.json')
+    .then(response => response.json())
+    .then(images => {
+      const galleryContainer = document.getElementById('gallery');
+      images.forEach(img => {
+        const div = document.createElement('div');
+        div.classList.add('gallery-item');
+        div.innerHTML = `<img src="${img.src}" alt="${img.title}"><p>${img.title}</p>`;
+        galleryContainer.appendChild(div);
+      });
+    });
 </script>
-  
-
-  
-
-  
 </body>
-  
 </html>
