--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,153 +1,43 @@
-<!-- Updated: Removed Contact section & updated Instagram link -->
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Keval Kotadia — Nature Photography</title>
-  <meta name="description" content="Explore the serene nature photography of Keval Kotadia — landscapes, wildlife & more." />
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-  <style>
-    :root{
-      --bg:#0f0f10; --card:#0f1720; --muted:#a7b0b8; --accent:#f59e0b; --white:#ffffff;
-      --max-width:1100px; --radius:14px;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
-    .container{max-width:var(--max-width); margin:0 auto; padding:28px}
-    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#111827,#0ea5a9);display:flex;align-items:center;justify-content:center;font-weight:700}
-    .brand h1{font-size:18px;margin:0}
-    .brand p{margin:0;font-size:13px;color:var(--muted)}
-    nav a{color:var(--white);text-decoration:none;margin-left:16px;font-size:14px}
-    .hero{display:grid;grid-template-columns:1fr;gap:24px;align-items:center;margin:40px 0}
-    .hero-main{padding:28px;background:rgba(255,255,255,0.02);border-radius:12px}
-    .hero .headline{font-size:28px;margin:0 0 8px}
-    .hero .sub{color:var(--muted);margin:0 0 16px}
-    .cta{display:inline-block;padding:10px 16px;border-radius:10px;background:var(--accent);color:#050505;font-weight:600;text-decoration:none}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px;margin:20px 0}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;overflow:hidden;position:relative}
-    .card img{width:100%;height:260px;object-fit:cover;display:block}
-    .card .meta{padding:12px}
-    .card .meta h3{margin:0 0 6px;font-size:16px}
-    .card .meta p{margin:0;color:var(--muted);font-size:13px}
-    .lightbox{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:1200}
-    .lightbox.open{display:flex}
-    .lightbox img{max-width:95%;max-height:85%;border-radius:8px;box-shadow:0 20px 40px rgba(0,0,0,0.6)}
-    .lb-close{position:absolute;top:28px;right:28px;background:rgba(0,0,0,0.4);border-radius:8px;padding:8px 10px;cursor:pointer}
-    footer{margin:48px 0 16px;color:var(--muted);font-size:13px;text-align:center}
-    @media (min-width:900px){
-      .hero{grid-template-columns:1fr 420px}
-      .hero .hero-image{height:420px;border-radius:12px;overflow:hidden}
-      .card img{height:200px}
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <div class="brand">
-        <div class="logo">KK</div>
-        <div>
-          <h1>Keval Kotadia</h1>
-          <p>Nature & Landscape Photographer</p>
-        </div>
+<!-- Gallery section start -->
+<section id="gallery">
+  <h2 style="margin-top:6px">Gallery</h2>
+  <div class="gallery" aria-live="polite">
+    <article class="card">
+      <img src="images/1.jpg" alt="Mountain Sunrise" loading="lazy" decoding="async" />
+      <div class="meta">
+        <h3>Mountain Sunrise</h3>
+        <p>2023</p>
       </div>
-      <nav>
-        <a href="#gallery">Gallery</a>
-        <a href="#about">About</a>
-        <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
-      </nav>
-    </header>
-
-    <section class="hero">
-      <div class="hero-main">
-        <p class="headline">Capturing the quiet moments in nature.</p>
-        <p class="sub">Welcome — I’m Keval. I specialize in landscape and nature photography. Browse the gallery below and follow me on Instagram for my latest work.</p>
-        <a class="cta" href="#gallery">View Gallery</a>
+    </article>
+    <article class="card">
+      <img src="images/2.jpg" alt="Forest Path" loading="lazy" decoding="async" />
+      <div class="meta">
+        <h3>Forest Path</h3>
+        <p>2023</p>
       </div>
-      <div class="hero-image" aria-hidden="true">
-        <img src="images/featured.webp" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
+    </article>
+    <article class="card">
+      <img src="images/3.jpg" alt="City Skyline" loading="lazy" decoding="async" />
+      <div class="meta">
+        <h3>City Skyline</h3>
+        <p>2022</p>
       </div>
-    </section>
-
-    <section id="gallery">
-      <h2 style="margin-top:6px">Gallery</h2>
-      <div id="galleryGrid" class="gallery" aria-live="polite"></div>
-    </section>
-
-    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true">
-      <div class="lb-close" id="lbClose">✕</div>
-      <img id="lbImage" src="" alt="Enlarged photo">
-    </div>
-
-    <section id="about" style="margin-top:30px">
-      <h2>About</h2>
-      <div style="display:grid;grid-template-columns:1fr;gap:16px;margin-top:12px">
-        <div style="font-size:15px;color:var(--muted)">I’m a nature photographer based in India. I hunt light, patience and moments that tell a story. Available for prints, commissions and travel assignments.</div>
+    </article>
+    <article class="card">
+      <img src="images/4.jpg" alt="Desert Dunes" loading="lazy" decoding="async" />
+      <div class="meta">
+        <h3>Desert Dunes</h3>
+        <p>2023</p>
       </div>
-    </section>
-
-    <footer>
-      © <span id="year"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" style="color:var(--muted);text-decoration:underline" target="_blank">Instagram</a>
-    </footer>
+    </article>
+    <article class="card">
+      <img src="images/5.jpg" alt="Ocean Waves" loading="lazy" decoding="async" />
+      <div class="meta">
+        <h3>Ocean Waves</h3>
+        <p>2022</p>
+      </div>
+    </article>
+    <!-- Ahiya tame navi photos pan add kari shako, copy-paste kari ne ane details update kari ne --> 
   </div>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    async function loadGallery(){
-      try{
-        const res = await fetch('gallery.json', {cache: 'no-cache'});
-        if(!res.ok) throw new Error('gallery.json not found');
-        const data = await res.json();
-        const grid = document.getElementById('galleryGrid');
-        data.forEach(item => {
-          const card = document.createElement('article');
-          card.className = 'card';
-          const img = document.createElement('img');
-          img.loading = 'lazy';
-          img.decoding = 'async';
-          img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
-          img.src = item.src;
-          img.addEventListener('click', () => openLightbox(item));
-          card.appendChild(img);
-          const meta = document.createElement('div');
-          meta.className = 'meta';
-          const h3 = document.createElement('h3'); h3.textContent = item.title || '';
-          const p = document.createElement('p'); p.textContent = item.year || '';
-          meta.appendChild(h3); meta.appendChild(p);
-          card.appendChild(meta);
-          grid.appendChild(card);
-        });
-      }catch(err){
-        document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
-      }
-    }
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lbImage');
-    function openLightbox(item){
-      lbImg.src = item.src; lbImg.alt = item.alt || item.title || '';
-      lb.classList.add('open');
-    }
-    document.getElementById('lbClose').addEventListener('click', () => { lb.classList.remove('open'); lbImg.src=''; });
-    lb.addEventListener('click', (e)=>{ if(e.target===lb){ lb.classList.remove('open'); lbImg.src=''; } });
-    loadGallery();
-    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') lb.classList.remove('open'); });
-  </script>
-  <script>
-  fetch('gallery.json')
-    .then(response => response.json())
-    .then(images => {
-      const galleryContainer = document.getElementById('gallery');
-      images.forEach(img => {
-        const div = document.createElement('div');
-        div.classList.add('gallery-item');
-        div.innerHTML = `<img src="${img.src}" alt="${img.title}"><p>${img.title}</p>`;
-        galleryContainer.appendChild(div);
-      });
-    });
-</script>
-</body>
-</html>
+</section>
+<!-- Gallery section end -->
