--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <nav>
-        <a href="..gallery/index.html">Gallery</a>
+        <a href="gallery/index.html">Gallery</a>
         <a href="about">About</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
       </nav>
