--- a/gallery/index.html
+++ b/gallery/index.html
@@ -75,6 +75,7 @@
         const res = await fetch('gallery.json', {cache: 'no-cache'});
         if(!res.ok) throw new Error('gallery.json not found');
         const data = await res.json();
+        console.log('Gallery data loaded:', data);
         const grid = document.getElementById('galleryGrid');
         data.forEach(item => {
           const card = document.createElement('article');
@@ -104,6 +105,7 @@
           grid.appendChild(card);
         });
       } catch (err) {
+        console.error('Error loading gallery:', err);
         document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
       }
     }
