--- a/gallery/index.html
+++ b/gallery/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <footer>
-      © <span id="2025"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" style="color:var(--muted); text-decoration:underline;">Instagram</a>
+      © <span id="year"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" style="color:var(--muted); text-decoration:underline;">Instagram</a>
     </footer>
   </div>
 
