--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Keval Kotadia — Gallery</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <meta name="description" content="Gallery of nature photos by Keval Kotadia" />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
