--- a/gallery/index.html
+++ b/gallery/index.html
@@ -190,7 +190,7 @@
         </div>
       </div>
       <nav>
-        <a href="../index.html">Home</a>
+        <a href="../">Home</a>
         <a href="../gallery/">Gallery</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" rel="noopener noreferrer">Instagram</a>
       </nav>
